lab/istio/examples/traffic-management/ingress-gateway/istio-objects/demo-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: public-ingress-routes
  namespace: demo
spec:
  hosts:
  - demo.example.com
  - httpbin.example.com
  gateways:
  - istio-system/public-ingress-gateway
  http:
    - name: httpbin
      headers:
        request:
          add:
            X-A1-origin-1: public-ingress-routes
      route:
      - destination:
          host: httpbin.demo.svc.cluster.local
          port:
            number: 8000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mesh-ingress-routes
  namespace: demo
spec:
  hosts:
  - httpbin.demo.svc.cluster.local
  gateways:
  - mesh
  http:
    - name: httpbin
      headers:
        request:
          add:
            X-A1-origin-2: mesh-ingress-routes
      route:
      - destination:
          host: httpbin.demo.svc.cluster.local
          port:
            number: 8000
