lab/istio/examples/traffic-management/ingress-gateway/istio-objects/public-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: public-ingress-routes
  namespace: istio-system
spec:
  hosts:
  - "demo.example.com"
  gateways:
  - public-ingress-gateway
  http:
  - route:
    - destination:
        host: httpbin.demo.svc.cluster.local
        port:
          number: 8000
