lab/istio/examples/traffic-management/ingress-gateway/istio-objects/virtualservice-httpbin-routes-mesh.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-routes-mesh
  namespace: demo
spec:
  hosts:
  - httpbin.demo.svc.cluster.local
  gateways:
  - mesh
  http:
    - name: httpbin
      headers:
        request:
          add:
            X-A1-origin-2: mesh-ingress-routes
      route:
      - destination:
          host: httpbin.demo.svc.cluster.local
          port:
            number: 8000
