lab/istio/examples/traffic-management/ingress-gateway/istio-objects/virtualservice-httpbin-routes-public.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-routes-public
  namespace: demo
spec:
  hosts:
  - demo.example.com
  - httpbin.example.com
  gateways:
  - istio-system/public-ingress-gateway
  http:
    - name: httpbin
      headers:
        request:
          add:
            X-A1-origin-1: public-ingress-routes
      route:
      - destination:
          host: httpbin.demo.svc.cluster.local
          port:
            number: 8000
