lab/istio/examples/traffic-management/ingress-gateway/istio-objects/virtualservice-routes-public.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-routes-public
  namespace: httpbin
spec:
  hosts:
    - demo.example.com
    - httpbin.example.com

  gateways:
    - istio-ingress/public-ingress-gateway

  http:
    - name: httpbin
      headers:
        request:
          add:
            X-A1-origin-1: public-ingress-route

      route:
        - destination:
            host: httpbin.httpbin.svc.cluster.local
            port:
              number: 8000
